updated the font issue not loading on mobile

--- a/app.css
+++ b/app.css
@@ -66,7 +66,7 @@ input, textarea, select {
 }
 
 @font-face {
-  font-family: "Alegreya Sans";
+  font-family: "Alegreya Sans", sans-serif;
   src: url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,500;0,700;1,500;1,700&display=swap");
 }
 body {
