--- a/css/typography.scss
+++ b/css/typography.scss
@@ -1,6 +1,6 @@
 @import url("https://use.typekit.net/wws5dro.css");
 
 @font-face {
-  font-family: "Alegreya Sans";
+  font-family: "Alegreya Sans", sans-serif;
   src: url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,500;0,700;1,500;1,700&display=swap");
 }
